[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/Ball.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Controller.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Ball.png" type="Texture" id=4]
[ext_resource path="res://new_gradient.tres" type="Gradient" id=5]
[ext_resource path="res://Sounds/ballHitPaddle.wav" type="AudioStream" id=6]
[ext_resource path="res://Scripts/Score.gd" type="Script" id=7]
[ext_resource path="res://Fonts/ABeeZee-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Sprites/background.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=25]
size = 374
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0.0600559, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.998603, 0.00613499 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=24]
radius = 16.0

[sub_resource type="DynamicFont" id=26]
size = 143
font_data = ExtResource( 8 )

[node name="Main" type="Node2D"]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 321.0
margin_top = 88.0
margin_right = 703.0
margin_bottom = 531.0
custom_fonts/font = SubResource( 25 )
text = "0"
align = 1
valign = 1

[node name="Score" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Controller" parent="." instance=ExtResource( 2 )]

[node name="Ball" type="KinematicBody2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
position = Vector2( 512, 300 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Ball"]
frames = SubResource( 7 )
frame = 3
playing = true

[node name="Explosion" type="CPUParticles2D" parent="Ball"]
emitting = false
amount = 40
one_shot = true
explosiveness = 1.0
texture = ExtResource( 4 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 1.0
scale_amount = 0.1
scale_amount_random = 1.0
scale_amount_curve = SubResource( 1 )
color_initial_ramp = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 24 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Ball"]
stream = ExtResource( 6 )
volume_db = 1.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
current = true
script = ExtResource( 3 )

[node name="ScoreLabel2" type="Label" parent="."]
margin_left = 402.0
margin_top = 305.0
margin_right = 626.0
margin_bottom = 748.0
custom_fonts/font = SubResource( 26 )
text = "0"
align = 1
valign = 1

[connection signal="hit" from="Ball" to="Score" method="_on_Ball_hit"]
